# Cubature

./: .gitignore  CMakeLists.txt  README.md
include/: Cubature
include/cubature_bits/: cubature.h
src/: hcubature.c  pcubature.c
tests/: test.c
